// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration Tests Half way through accurate week, marathon, intermediate 1`] = `
"Weeks:
Week 1 of Mon, 1 Jan — 37.6km / 5:53
DONE!
 - 6.7km @ 6:03
 - 6.1km @ 6:03
 - 6.1km @ 6:03
 - 18.3km @ 5:41
(total 37.2km @ 5:52)

Week 2 of Mon, 8 Jan — 40.8km / 5:53
 - 7.3km @ 6:03
 - 6.6km @ 6:03
Thursday: (recovery) 6.7km @ 6:07
Sunday: (long) 20.1km @ 5:41

Week 3 of Mon, 15 Jan — 35.3km / 5:53
Tuesday: (speed) 6.4km @ 6:04
Wednesday: (recovery) 5.8km @ 6:04
Thursday: (recovery) 5.8km @ 6:04
Sunday: (long) 17.4km @ 5:41

Week 4 of Mon, 22 Jan — 47.9km / 5:53
Tuesday: (speed) 8.6km @ 6:04
Wednesday: (recovery) 7.8km @ 6:04
Thursday: (recovery) 7.8km @ 6:04
Sunday: (long) 23.5km @ 5:41

Week 5 of Mon, 29 Jan — 51.9km / 5:53
Tuesday: (speed) 9.4km @ 6:04
Wednesday: (recovery) 8.5km @ 6:04
Thursday: (recovery) 8.5km @ 6:04
Sunday: (long) 25.5km @ 5:41

Week 6 of Mon, 5 Feb — 45.0km / 5:53
Tuesday: (speed) 8.1km @ 6:04
Wednesday: (recovery) 7.4km @ 6:04
Thursday: (recovery) 7.4km @ 6:04
Sunday: (long) 22.1km @ 5:41

Week 7 of Mon, 12 Feb — 60.9km / 5:53
Tuesday: (speed) 11.0km @ 6:04
Wednesday: (recovery) 10.0km @ 6:04
Thursday: (recovery) 10.0km @ 6:04
Sunday: (long) 29.9km @ 5:41

Week 8 of Mon, 19 Feb — 66.0km / 5:53
Tuesday: (speed) 12.0km @ 6:04
Wednesday: (recovery) 10.9km @ 6:04
Thursday: (recovery) 10.9km @ 6:04
Sunday: (long) 32.2km @ 5:41

Week 9 of Mon, 26 Feb — 57.2km / 5:53
Tuesday: (speed) 10.3km @ 6:04
Wednesday: (recovery) 9.4km @ 6:04
Thursday: (recovery) 9.4km @ 6:04
Sunday: (long) 28.1km @ 5:41

Week 10 of Mon, 5 Mar — 77.5km / 5:53
Tuesday: (speed) 15.7km @ 6:01
Wednesday: (recovery) 14.8km @ 6:01
Thursday: (recovery) 14.8km @ 6:01
Sunday: (long) 32.2km @ 5:41

Week 11 of Mon, 12 Mar — 40.1km / 5:53
Tuesday: (speed) 7.2km @ 6:04
Wednesday: (recovery) 6.6km @ 6:04
Thursday: (recovery) 6.6km @ 6:04
Sunday: (long) 19.7km @ 5:41

Week 12 of Mon, 19 Mar — 25.5km / 5:53
Tuesday: (speed) 4.6km @ 6:04
Wednesday: (recovery) 4.2km @ 6:04
Thursday: (recovery) 4.2km @ 6:04
Sunday: (long) 12.5km @ 5:41"
`;

exports[`Integration Tests Half way through week, long run on different day, marathon, intermediate 1`] = `
"Weeks:
Week 1 of Mon, 1 Jan — 37.6km / 5:53
DONE!
 - 6.7km @ 6:03
 - 6.1km @ 6:03
 - 6.1km @ 6:03
 - 18.3km @ 5:41
(total 37.2km @ 5:52)

Week 2 of Mon, 8 Jan — 40.8km / 5:53
 - 7.3km @ 6:03
 - 19.8km @ 5:41
Wednesday: (recovery) 6.8km @ 6:05
Thursday: (recovery) 6.8km @ 6:05

Week 3 of Mon, 15 Jan — 35.3km / 5:53
Tuesday: (speed) 6.4km @ 6:04
Wednesday: (recovery) 5.8km @ 6:04
Thursday: (recovery) 5.8km @ 6:04
Sunday: (long) 17.4km @ 5:41

Week 4 of Mon, 22 Jan — 47.9km / 5:53
Tuesday: (speed) 8.6km @ 6:04
Wednesday: (recovery) 7.8km @ 6:04
Thursday: (recovery) 7.8km @ 6:04
Sunday: (long) 23.5km @ 5:41

Week 5 of Mon, 29 Jan — 51.9km / 5:53
Tuesday: (speed) 9.4km @ 6:04
Wednesday: (recovery) 8.5km @ 6:04
Thursday: (recovery) 8.5km @ 6:04
Sunday: (long) 25.5km @ 5:41

Week 6 of Mon, 5 Feb — 45.0km / 5:53
Tuesday: (speed) 8.1km @ 6:04
Wednesday: (recovery) 7.4km @ 6:04
Thursday: (recovery) 7.4km @ 6:04
Sunday: (long) 22.1km @ 5:41

Week 7 of Mon, 12 Feb — 60.9km / 5:53
Tuesday: (speed) 11.0km @ 6:04
Wednesday: (recovery) 10.0km @ 6:04
Thursday: (recovery) 10.0km @ 6:04
Sunday: (long) 29.9km @ 5:41

Week 8 of Mon, 19 Feb — 66.0km / 5:53
Tuesday: (speed) 12.0km @ 6:04
Wednesday: (recovery) 10.9km @ 6:04
Thursday: (recovery) 10.9km @ 6:04
Sunday: (long) 32.2km @ 5:41

Week 9 of Mon, 26 Feb — 57.2km / 5:53
Tuesday: (speed) 10.3km @ 6:04
Wednesday: (recovery) 9.4km @ 6:04
Thursday: (recovery) 9.4km @ 6:04
Sunday: (long) 28.1km @ 5:41

Week 10 of Mon, 5 Mar — 77.5km / 5:53
Tuesday: (speed) 15.7km @ 6:01
Wednesday: (recovery) 14.8km @ 6:01
Thursday: (recovery) 14.8km @ 6:01
Sunday: (long) 32.2km @ 5:41

Week 11 of Mon, 12 Mar — 40.1km / 5:53
Tuesday: (speed) 7.2km @ 6:04
Wednesday: (recovery) 6.6km @ 6:04
Thursday: (recovery) 6.6km @ 6:04
Sunday: (long) 19.7km @ 5:41

Week 12 of Mon, 19 Mar — 25.5km / 5:53
Tuesday: (speed) 4.6km @ 6:04
Wednesday: (recovery) 4.2km @ 6:04
Thursday: (recovery) 4.2km @ 6:04
Sunday: (long) 12.5km @ 5:41"
`;

exports[`Integration Tests New plan, marathon, intermediate 1`] = `
"Weeks:
Week 1 of Mon, 1 Jan — 37.6km / 5:53
Tuesday: (speed) 6.8km @ 6:04
Wednesday: (recovery) 6.2km @ 6:04
Thursday: (recovery) 6.2km @ 6:04
Sunday: (long) 18.5km @ 5:41

Week 2 of Mon, 8 Jan — 40.8km / 5:53
Tuesday: (speed) 7.4km @ 6:04
Wednesday: (recovery) 6.7km @ 6:04
Thursday: (recovery) 6.7km @ 6:04
Sunday: (long) 20.0km @ 5:41

Week 3 of Mon, 15 Jan — 35.3km / 5:53
Tuesday: (speed) 6.4km @ 6:04
Wednesday: (recovery) 5.8km @ 6:04
Thursday: (recovery) 5.8km @ 6:04
Sunday: (long) 17.4km @ 5:41

Week 4 of Mon, 22 Jan — 47.9km / 5:53
Tuesday: (speed) 8.6km @ 6:04
Wednesday: (recovery) 7.8km @ 6:04
Thursday: (recovery) 7.8km @ 6:04
Sunday: (long) 23.5km @ 5:41

Week 5 of Mon, 29 Jan — 51.9km / 5:53
Tuesday: (speed) 9.4km @ 6:04
Wednesday: (recovery) 8.5km @ 6:04
Thursday: (recovery) 8.5km @ 6:04
Sunday: (long) 25.5km @ 5:41

Week 6 of Mon, 5 Feb — 45.0km / 5:53
Tuesday: (speed) 8.1km @ 6:04
Wednesday: (recovery) 7.4km @ 6:04
Thursday: (recovery) 7.4km @ 6:04
Sunday: (long) 22.1km @ 5:41

Week 7 of Mon, 12 Feb — 60.9km / 5:53
Tuesday: (speed) 11.0km @ 6:04
Wednesday: (recovery) 10.0km @ 6:04
Thursday: (recovery) 10.0km @ 6:04
Sunday: (long) 29.9km @ 5:41

Week 8 of Mon, 19 Feb — 66.0km / 5:53
Tuesday: (speed) 12.0km @ 6:04
Wednesday: (recovery) 10.9km @ 6:04
Thursday: (recovery) 10.9km @ 6:04
Sunday: (long) 32.2km @ 5:41

Week 9 of Mon, 26 Feb — 57.2km / 5:53
Tuesday: (speed) 10.3km @ 6:04
Wednesday: (recovery) 9.4km @ 6:04
Thursday: (recovery) 9.4km @ 6:04
Sunday: (long) 28.1km @ 5:41

Week 10 of Mon, 5 Mar — 77.5km / 5:53
Tuesday: (speed) 15.7km @ 6:01
Wednesday: (recovery) 14.8km @ 6:01
Thursday: (recovery) 14.8km @ 6:01
Sunday: (long) 32.2km @ 5:41

Week 11 of Mon, 12 Mar — 40.1km / 5:53
Tuesday: (speed) 7.2km @ 6:04
Wednesday: (recovery) 6.6km @ 6:04
Thursday: (recovery) 6.6km @ 6:04
Sunday: (long) 19.7km @ 5:41

Week 12 of Mon, 19 Mar — 25.5km / 5:53
Tuesday: (speed) 4.6km @ 6:04
Wednesday: (recovery) 4.2km @ 6:04
Thursday: (recovery) 4.2km @ 6:04
Sunday: (long) 12.5km @ 5:41"
`;
